# apex

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
configs/: app.yaml  prometheus.yml  strategy.yaml  tracks.yaml
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICKSTART.md  SDK.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/roadmap/: README.md  phase1_intelligence_upgrade.md  phase2_visualization_upgrade.md  phase3_full_race_lifecycle.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.js
frontend/src/: App.jsx  (+5 more)
scripts/: download_session.py  run_server.py
tests/: README.md  TEST_RESULTS.md  conftest.py  run_all_tests.py  run_tests.sh  test_api_endpoints.py  test_championship.py  test_competitor_modeling.py  test_degradation_model.py  test_exceptions.py  test_features.py  test_integration.py  test_live_race.py  test_multi_stop_optimizer.py  test_neural_pace.py  test_prediction_accuracy.py  test_reducers.py  test_rls.py  test_strategy.py  test_track_priors.py  test_upgrades.py  test_websocket_simulation.py
wiki/: API-Reference.md  Architecture.md  Architecture.md.bak  Contributing.md  Deployment.md  Development-Guide.md  Home.md  Python-SDK.md  Quick-Start.md  Security.md  Troubleshooting.md  User-Guide.md  _Sidebar.md
(+172 files in other folders)
