[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "race-strategy-workbench"
version = "1.0.7"
description = "F1 Race Strategy Workbench - Real-time race analytics and pit strategy optimization"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Race Strategy Team" }
]
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "fastf1>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
rsw = "rsw.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rsw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
